force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__ConversationId__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__ConversationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Conversation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>