force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__DateSent__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__DateSent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date and time the send was actually sent by Marketing Cloud</inlineHelpText>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>