force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__ExclusionLists__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__ExclusionLists__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclusion Lists</label>
    <type>TextArea</type>
</CustomField>