force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__FromAddress__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__FromAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Address</label>
    <type>Email</type>
</CustomField>