force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__Opt_in_Certification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Opt_in_Certification_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opt-in Certification Date/Time</label>
    <type>DateTime</type>
</CustomField>