force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__SenderProfileId__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__SenderProfileId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SenderProfileId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>