force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__SendTime__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__SendTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>