force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__shortCode__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__shortCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>