force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__smsId__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__smsId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>