force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__smsName__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__smsName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>