force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__Status_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Status_Date_Time__c</fullName>
    <defaultValue>now()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Date/Time</label>
    <type>DateTime</type>
</CustomField>