force-app/main/default/src/objects/et4ae5__SMSDefinition__c/fields/et4ae5__SubscriberListName__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__SubscriberListName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subscriber List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>